# sport-slot-reservation

./: .firebaserc  .gitignore  CHANGELOG.md  LICENSE  Makefile  README.md  firebase.json
.claude/: settings.json
backend/: .dockerignore  .env.example  Dockerfile  cloudbuild.yaml  pyproject.toml
backend/scripts/: reset_superadmin.py  seed_dev_user.py  seed_facility_catalog.py  seed_platform_admin.py
backend/src/sport_slot/: config.py  dependencies.py  health.py  logging.py  main.py  ratelimit.py
backend/src/sport_slot/api/: error_codes.py  errors.py
backend/src/sport_slot/api/internal/: invoicing.py  tasks.py
backend/src/sport_slot/api/v1/: admin.py  agent.py  auth.py  bookings.py  branding.py  daily_overview.py  facilities.py  facility_catalog.py  invoices.py  tenant_config.py  users.py  voice.py
backend/src/sport_slot/auth/: context.py  dependency.py  password_policy.py  roles.py  scheduler_auth.py  tasks_auth.py
backend/src/sport_slot/middleware/: request_id.py  security_headers.py
backend/src/sport_slot/models/: facility.py  user_profile.py
backend/src/sport_slot/notifications/: tasks.py
backend/src/sport_slot/notifications/email/: provider.py  resend_provider.py  templates.py
backend/src/sport_slot/repositories/: base.py  bookings.py  facilities.py  invoices.py  password_reset.py  platform_deletion_log.py  user_profiles.py
backend/src/sport_slot/services/: availability.py  bookings.py  facilities.py  invoice_export.py  invoicing.py  lock.py  password_reset.py  policy.py  provisioning.py  tenants.py
backend/src/sport_slot/services/agent/: guardrails.py  orchestrator.py  pending_actions.py  preferences.py  text_format.py  tools.py  vertex_client.py
backend/src/sport_slot/services/voice/: confirm_guard.py  confirm_lexicon_data.py  languages.py  stt.py  tts.py  voice_pipeline.py
backend/tests/: conftest.py  email_fakes.py  test_admin_provisioning.py  test_agent.py  test_agent_booking.py  test_agent_cancel.py  test_agent_invoice_routing.py  test_agent_invoices.py  test_agent_preferences.py  test_agent_text_format.py  test_architecture.py  test_auth.py  test_auth_confirm_reset.py  test_auth_forgot_password.py  test_availability.py  test_availability_endpoint.py  test_bookings.py  test_branding.py  test_bulk_create_users.py  test_cancel_booking_svc.py  test_cancellation.py  test_create_booking_svc.py  test_daily_overview.py  test_email_templates.py  test_facilities_and_policy.py  test_fake_email_provider.py  test_health_and_errors.py  test_invoice_export.py  test_invoices_api.py  test_invoicing_service.py  test_invoicing_worker.py  test_lock_service.py  test_logging.py  test_password_policy.py  test_repositories.py  test_resend_provider.py  test_service_fns.py  test_tasks_enqueue.py  test_tasks_worker.py  test_tenant_config.py  (+9 more)
docs/: PIPELINE_VALIDATION.md  REQUIREMENTS.md  SLOTSENSE_ARTICLE.md  backlog.md  roadmap.md
frontend/: .env.example  .env.production  components.json  eslint.config.js  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
infrastructure/: firestore.indexes.json  firestore.rules  iam-config.yaml  project-config.yaml
scripts/: build_push.sh  concurrency_test.py  deploy_cloud_run.sh  deploy_firestore_rules.sh  deploy_hosting.sh  deploy_hosting_rest.sh  gcp-set-dev.sh  gcp-whoami.sh  get_dev_token.sh  install.sh  setup_build_infra.sh  setup_redis_infra.sh  tf-apply-dev.sh  tf-destroy-dev.sh  tf-init.sh  (+3 more)
(+234 files in other folders)
