[project]
name = "sport-slot-backend"
version = "0.2.0"
description = "SportSlotReservation backend API"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.34",
  "firebase-admin>=6.6",
  "pydantic>=2.10",
  "pydantic-settings>=2.7",
  "structlog>=24.4",
  "google-cloud-firestore>=2.19",
  "slowapi>=0.1.9",
  "redis>=5.2",
]

[dependency-groups]
dev = [
  "pytest>=8.3",
  "pytest-asyncio>=0.25",
  "httpx>=0.28",
  "pytest-cov>=6.0",
  "ruff>=0.8",
  "bandit>=1.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sport_slot"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.coverage.run]
source = ["src/sport_slot"]
