[project]
name = "sport-slot-backend"
version = "0.2.0"
description = "SportSlotReservation backend API"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.34",
  "firebase-admin>=6.6",
  "pydantic[email]>=2.10",
  "pydantic-settings>=2.7",
  "structlog>=24.4",
  "google-cloud-firestore>=2.19",
  "slowapi>=0.1.9",
  "redis>=5.2",
  "httpx>=0.28",
  "google-cloud-tasks>=2.16",
  "google-cloud-storage>=2.18",
  "google-cloud-speech>=2.40",
  "google-cloud-texttospeech>=2.37",
  "google-auth>=2.36",
  "google-genai>=1.0",
  "zxcvbn>=4.5.0",
  "python-multipart>=0.0.32",
]

[dependency-groups]
dev = [
  "pytest>=8.3",
  "pytest-asyncio>=0.25",
  "pytest-cov>=6.0",
  "ruff>=0.8",
  "bandit>=1.8",
  "mypy>=2.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sport_slot"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.mypy]
# Scoped deliberately to services/voice/ only (Voice I/O sub-phase 1b).
# The rest of the codebase predates this gate and is not type-hinted
# consistently enough to pass mypy without an unrelated cleanup effort —
# out of scope here. Do not widen `files` without doing that cleanup first.
python_version = "3.12"
files = ["src/sport_slot/services/voice"]
disallow_untyped_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_return_any = true
warn_unused_ignores = true
ignore_missing_imports = false

[tool.coverage.run]
source = ["src/sport_slot"]
